課題実施　登録画面への項目追加　＆　商品詳細画面へ登録情報の表示

--- a/src/Eccube/Resource/locale/messages.ja.yaml
+++ b/src/Eccube/Resource/locale/messages.ja.yaml
@@ -624,6 +624,7 @@ admin.product.permanently_delete__complete: 完了
 admin.product.permanently_delete__system_error: システムエラーが発生しました
 admin.product.copy__confirm_title: 商品を複製します
 admin.product.copy__confirm_message: 商品を複製してよろしいですか？
+admin.product.subtitle: サブタイトル
 admin.product.name: 商品名
 admin.product.image: 商品画像
 admin.product.image__short: 画像
